--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -42,6 +42,7 @@
                     </ul>
                   </div>
                   <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                  <button id="filter-btn" type="button" class="btn btn-default" onClick="window.location.reload();">Reset Page</button>
                 </form>
               </div>
             </div>
@@ -49,9 +50,9 @@
         </div>
         <div class="col-md-10">
           <div id="table-area" class="">
-            <!-- <table id="ufo-table" class="table table-striped"> -->
-            <table class="table table-striped">
-              <thead>
+            <table>
+            <!--<table id="ufo-table" class="table table-striped">
+               <thead>
                 <tr>
                   <th class="table-head">Date</th>
                   <th class="table-head">City</th>
@@ -62,7 +63,7 @@
                   <th class="table-head">Comments</th>
                 </tr>
               </thead>
-              <tbody></tbody>
+              <tbody></tbody> -->
             </table>
           </div>
         </div>
